Add helper method to convert access code to token.

--- a/FSExampleOAuth/FSExampleOAuth/en.lproj/FSViewController.xib
+++ b/FSExampleOAuth/FSExampleOAuth/en.lproj/FSViewController.xib
@@ -110,7 +110,7 @@
 					<object class="IBUILabel" id="1016112414">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 133}, {280, 59}}</string>
+						<string key="NSFrame">{{20, 218}, {280, 58}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="83726747"/>
@@ -194,7 +194,7 @@
 					<object class="IBUITextField" id="765822440">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 278}, {280, 30}}</string>
+						<string key="NSFrame">{{103, 138}, {197, 30}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="112935906"/>
@@ -222,7 +222,7 @@
 					<object class="IBUILabel" id="83726747">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 249}, {103, 21}}</string>
+						<string key="NSFrame">{{20, 133}, {59, 39}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="765822440"/>
@@ -236,39 +236,20 @@
 						<reference key="IBUITextColor" ref="5525043"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<reference key="IBUIFontDescription" ref="35487500"/>
-						<reference key="IBUIFont" ref="609908654"/>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-					</object>
-					<object class="IBUILabel" id="717894430">
-						<reference key="NSNextResponder" ref="774585933"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 358}, {292, 21}}</string>
-						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSWindow"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<int key="IBUIContentMode">7</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Result:</string>
-						<reference key="IBUITextColor" ref="5525043"/>
-						<nil key="IBUIHighlightedColor"/>
-						<int key="IBUIBaselineAdjustment">0</int>
-						<float key="IBUIMinimumFontSize">8</float>
-						<bool key="IBUIAdjustsLetterSpacingToFitWidth">YES</bool>
+						<int key="IBUINumberOfLines">2</int>
 						<int key="IBUILineBreakMode">0</int>
 						<reference key="IBUIFontDescription" ref="35487500"/>
 						<reference key="IBUIFont" ref="609908654"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+						<double key="preferredMaxLayoutWidth">59</double>
 					</object>
 					<object class="IBUIButton" id="112935906">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{86, 316}, {148, 35}}</string>
+						<string key="NSFrame">{{86, 176}, {148, 35}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="717894430"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -404,14 +385,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">tokenResultLabel</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="717894430"/>
-					</object>
-					<int key="connectionID">147</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">callbackUrlField</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="452790115"/>
@@ -493,11 +466,10 @@
 							<reference ref="452790115"/>
 							<reference ref="101544467"/>
 							<reference ref="102290569"/>
-							<reference ref="1016112414"/>
-							<reference ref="83726747"/>
 							<reference ref="765822440"/>
+							<reference ref="83726747"/>
 							<reference ref="112935906"/>
-							<reference ref="717894430"/>
+							<reference ref="1016112414"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -542,12 +514,6 @@
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">102</int>
-						<reference key="object" ref="717894430"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="774585933"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">114</int>
 						<reference key="object" ref="112935906"/>
 						<array class="NSMutableArray" key="children"/>
@@ -572,7 +538,6 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="102.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="114.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="190.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
