Update foursquare-ios-oauth to use Safari VC on iOS 9 (#17)
* add nullability flags to the header

* WIP progress towards SafariVC support

* nil safariVC

* turn off spell correction/autocomplete on fields

* document the singleton

* avoid a memory leak when dismissing the Safari VC through the Done button/swiping back

* update the ReadMe

--- a/FSExampleOAuth/FSExampleOAuth/en.lproj/FSViewController.xib
+++ b/FSExampleOAuth/FSExampleOAuth/en.lproj/FSViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FSViewController">
@@ -31,7 +31,7 @@
                     <rect key="frame" x="103" y="45" width="197" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
                     <connections>
                         <action selector="dismissKeyboard:" destination="-1" eventType="editingDidEndOnExit" id="225"/>
                     </connections>
@@ -47,7 +47,7 @@
                     <rect key="frame" x="103" y="83" width="197" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="done"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" returnKeyType="done"/>
                     <connections>
                         <action selector="dismissKeyboard:" destination="-1" eventType="editingDidEndOnExit" id="226"/>
                     </connections>
@@ -63,7 +63,7 @@
                     <rect key="frame" x="103" y="136" width="197" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="done"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" returnKeyType="done"/>
                     <connections>
                         <action selector="dismissKeyboard:" destination="-1" eventType="editingDidEndOnExit" id="vXu-5J-Kii"/>
                     </connections>
@@ -78,7 +78,7 @@ callback:</string>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="13">
-                    <rect key="frame" x="80" y="184" width="150" height="24"/>
+                    <rect key="frame" x="103" y="184" width="150" height="24"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                     <state key="normal" image="connect-blue.png">
@@ -103,7 +103,7 @@ callback:</string>
                     <rect key="frame" x="103" y="221" width="197" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
                     <connections>
                         <action selector="dismissKeyboard:" destination="-1" eventType="editingDidEndOnExit" id="227"/>
                     </connections>
